--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,5 +2,6 @@ fixtures:
   repositories:
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
     firewall: git://github.com/puppetlabs/puppetlabs-firewall.git
+    epel: git://github.com/stahnma/puppet-module-epel.git
   symlinks:
     zabbix20: "#{source_dir}"
