--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: ruby
 bundler_args: --without development
-script: "bundle exec rake spec:all SPEC_OPTS='--format documentation'"
+script: "bundle exec rake ci"
 rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
   - ruby-head
 env:
-  - PUPPET_GEM_VERSION="~> 2.6.0"
   - PUPPET_GEM_VERSION="~> 2.7.0"
   - PUPPET_GEM_VERSION="~> 3.0.0"
   - PUPPET_GEM_VERSION="~> 3.1.0"
@@ -26,11 +25,5 @@ matrix:
       env: PUPPET_GEM_VERSION="~> 2.7.0"
     - rvm: ruby-head
       env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: 1.9.3
-      env: PUPPET_GEM_VERSION="~> 2.6.0"
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 2.6.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 2.6.0"
 notifications:
   email: false
