--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,5 +3,6 @@ fixtures:
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
     firewall: git://github.com/puppetlabs/puppetlabs-firewall.git
     epel: git://github.com/stahnma/puppet-module-epel.git
+    mysql: git://github.com/puppetlabs/puppetlabs-mysql.git
   symlinks:
     zabbix20: "#{source_dir}"
