--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,16 @@ rvm:
   - 2.0.0
   - ruby-head
 env:
+  - PUPPET_GEM_VERSION="~> 2.6.0"
   - PUPPET_GEM_VERSION="~> 2.7.0"
   - PUPPET_GEM_VERSION="~> 3.0.0"
   - PUPPET_GEM_VERSION="~> 3.1.0"
   - PUPPET_GEM_VERSION="~> 3.2.0"
+  - PUPPET_GEM_VERSION="~> 3.3.0"
 matrix:
   allow_failures:
     - rvm: ruby-head
+    - env: PUPPET_GEM_VERSION="~> 2.6.0"
   exclude:
     - rvm: 2.0.0
       env: PUPPET_GEM_VERSION="~> 3.1.0"
@@ -25,5 +28,11 @@ matrix:
       env: PUPPET_GEM_VERSION="~> 2.7.0"
     - rvm: ruby-head
       env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 1.9.3
+      env: PUPPET_GEM_VERSION="~> 2.6.0"
+    - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 2.6.0"
+    - rvm: ruby-head
+      env: PUPPET_GEM_VERSION="~> 2.6.0"
 notifications:
   email: false
