--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,6 +3,9 @@ fixtures:
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
     firewall: git://github.com/puppetlabs/puppetlabs-firewall.git
     epel: git://github.com/stahnma/puppet-module-epel.git
-    mysql: git://github.com/puppetlabs/puppetlabs-mysql.git
+    mysql: 
+      repo: git://github.com/puppetlabs/puppetlabs-mysql.git
+      ref: "0.9.0"
+    create_resources: git://github.com/puppetlabs/puppetlabs-create_resources.git
   symlinks:
     zabbix20: "#{source_dir}"
