--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -6,6 +6,9 @@ fixtures:
     mysql: 
       repo: git://github.com/puppetlabs/puppetlabs-mysql.git
       ref: "0.9.0"
+    sudo:
+      repo: git://github.com/saz/puppet-sudo.git
+      ref: 'v2.2.0'
     create_resources: git://github.com/puppetlabs/puppetlabs-create_resources.git
   symlinks:
     zabbix20: "#{source_dir}"
