--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,11 @@ env:
   - PUPPET_GEM_VERSION="~> 3.1.0"
   - PUPPET_GEM_VERSION="~> 3.2.0"
   - PUPPET_GEM_VERSION="~> 3.3.0"
+  - PUPPET_GEM_VERSION="~> 3.4.0"
 matrix:
   allow_failures:
     - rvm: ruby-head
-    - env: PUPPET_GEM_VERSION="~> 2.6.0"
+    - env: PUPPET_GEM_VERSION="~> 3.0.0"
   exclude:
     - rvm: 2.0.0
       env: PUPPET_GEM_VERSION="~> 3.1.0"
@@ -28,11 +29,5 @@ matrix:
       env: PUPPET_GEM_VERSION="~> 2.7.0"
     - rvm: ruby-head
       env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: 1.9.3
-      env: PUPPET_GEM_VERSION="~> 2.6.0"
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 2.6.0"
-    - rvm: ruby-head
-      env: PUPPET_GEM_VERSION="~> 2.6.0"
 notifications:
   email: false
