--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,14 +1,19 @@
 fixtures:
   repositories:
-    stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
-    firewall: git://github.com/puppetlabs/puppetlabs-firewall.git
-    epel: git://github.com/stahnma/puppet-module-epel.git
+    stdlib:
+      repo: git://github.com/puppetlabs/puppetlabs-stdlib.git
+      ref: 4.1.0
+    firewall:
+      repo: git://github.com/puppetlabs/puppetlabs-firewall.git
+      ref: 0.4.2
+    epel:
+      repo: git://github.com/stahnma/puppet-module-epel.git
+      ref: 0.0.6
     mysql: 
       repo: git://github.com/puppetlabs/puppetlabs-mysql.git
-      ref: "0.9.0"
+      ref: 2.1.0
     sudo:
       repo: git://github.com/saz/puppet-sudo.git
-      ref: 'v2.2.0'
-    create_resources: git://github.com/puppetlabs/puppetlabs-create_resources.git
+      ref: v3.0.1
   symlinks:
     zabbix20: "#{source_dir}"
