--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -15,5 +15,8 @@ fixtures:
     sudo:
       repo: git://github.com/saz/puppet-sudo.git
       ref: v3.0.1
+    limits:
+      repo: git://github.com/saz/puppet-limits.git
+      ref: v2.0.1
   symlinks:
     zabbix20: "#{source_dir}"
