--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-bundler_args: --without development
+bundler_args: --without system_tests
 before_install: rm Gemfile.lock || true
 script: "bundle exec rake test"
 rvm:
